[package]
name = "sandwich-bot"
version = "0.1.0"
edition = "2021"

[lib]
name = "sandwich_bot"
path = "src/lib.rs"

[[bin]]
name = "sandwich-bot"
path = "src/main.rs"

[dependencies]
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
solana-pubsub-client = "1.18"
solana-rpc-client-api = "1.18"
spl-token = "3.5"
spl-associated-token-account = "2.2"
tokio = { version = "1.30", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
bs58 = "0.5"
bincode = "1.3"
borsh = "0.10"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
rand = "0.8"
futures-util = "0.3"
dotenv = "0.15"
lazy_static = "1.4"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
ahash = "0.8"
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
tabled = "0.15"
futures = "0.3"
tokio-tungstenite = "0.20"
crossbeam-channel = "0.5"